--- a/templates/recipes/recipe_detail.html
+++ b/templates/recipes/recipe_detail.html
@@ -46,7 +46,7 @@
                     <div class="receipe-duration">
                         <h5>Подготовка: {{ single_recipe.preparation }} мин</h6>
                         <h5>Готвене: {{ single_recipe.cook }} мин</h6>
-                        <h5>Пропорции: {{ single_recipe.yields }} порции</h6>
+                        <h5>Порции: {{ single_recipe.yields }}</h6>
                     </div>
                 </div>
             </div>
